Mock tenkt struktur for nytt amo kodeverk
