# frontend/tiltaksadministrasjon-api-client/openapi.yaml
@@ -1667,6 +1667,69 @@ paths:
               schema:
                 $ref: "#/components/schemas/ProblemDetail"
       deprecated: false
+  /api/tiltaksadministrasjon/kodeverk/opplaring/kategorisering:
+    get:
+      tags:
+      - Kodeverk
+      description: Struktur for kategorisering av arbeidsmarkedsopplæring
+      operationId: getOpplaringKategorisering
+      parameters:
+      - name: tiltakskode
+        in: query
+        required: false
+        deprecated: false
+        explode: false
+        schema:
+          $ref: "#/components/schemas/Tiltakskode"
+      responses:
+        "200":
+          description: Kategorisering av kategorisering
+          headers: {}
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/OpplaringKategoriseringResponse"
+        default:
+          description: Problem details
+          headers: {}
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetail"
+      deprecated: false
+  /api/tiltaksadministrasjon/kodeverk/opplaring/sertifiseringer/sok:
+    get:
+      tags:
+      - Kodeverk
+      description: Søk etter sertifiseringer
+      operationId: sokSertifiseringer
+      parameters:
+      - name: q
+        in: query
+        description: Søketekst for sertifisering
+        required: true
+        deprecated: false
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Liste over sertifiseringer som matcher søket
+          headers: {}
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Sertifisering"
+        default:
+          description: Problem details
+          headers: {}
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetail"
+      deprecated: false
   /api/tiltaksadministrasjon/kodeverk/kontorstruktur:
     get:
       tags:
@@ -5923,6 +5986,123 @@ components:
       - beskrivelse
       - navn
       - type
+    Container:
+      anyOf:
+      - $ref: "#/components/schemas/Gruppe"
+      - $ref: "#/components/schemas/VerdiSok"
+      - $ref: "#/components/schemas/Verdigruppe"
+      discriminator:
+        propertyName: type
+        mapping:
+          Gruppe: "#/components/schemas/Gruppe"
+          VerdiSok: "#/components/schemas/VerdiSok"
+          Verdigruppe: "#/components/schemas/Verdigruppe"
+    Gruppe:
+      type: object
+      properties:
+        id:
+          type:
+          - "null"
+          - string
+          format: uuid
+        visningsnavn:
+          type: string
+        alternativer:
+          type: array
+          items:
+            $ref: "#/components/schemas/Container"
+      required:
+      - alternativer
+      - id
+      - visningsnavn
+    VerdiSok:
+      type: object
+      properties:
+        id:
+          type:
+          - "null"
+          - string
+          format: uuid
+        visningsnavn:
+          type: string
+        representerer:
+          type: string
+        seleksjonstype:
+          $ref: "#/components/schemas/OpplaringKategoriseringResponse.Seleksjonstype"
+        sokUrl:
+          type: string
+      required:
+      - id
+      - representerer
+      - seleksjonstype
+      - sokUrl
+      - visningsnavn
+    OpplaringKategoriseringResponse.Seleksjonstype:
+      type: string
+      enum:
+      - ENKELTVALG
+      - FLERVALG
+    Verdigruppe:
+      type: object
+      properties:
+        id:
+          type:
+          - "null"
+          - string
+          format: uuid
+        visningsnavn:
+          type: string
+        representerer:
+          type: string
+        seleksjonstype:
+          $ref: "#/components/schemas/OpplaringKategoriseringResponse.Seleksjonstype"
+        alternativer:
+          type: array
+          items:
+            $ref: "#/components/schemas/Verdi"
+      required:
+      - alternativer
+      - id
+      - representerer
+      - seleksjonstype
+      - visningsnavn
+    Verdi:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        visningsnavn:
+          type: string
+        valgt:
+          type: boolean
+      required:
+      - id
+      - valgt
+      - visningsnavn
+    OpplaringKategoriseringResponse:
+      type: object
+      properties:
+        tiltakskode:
+          $ref: "#/components/schemas/Tiltakskode"
+        alternativer:
+          type: array
+          items:
+            $ref: "#/components/schemas/Container"
+      required:
+      - alternativer
+      - tiltakskode
+    Sertifisering:
+      type: object
+      properties:
+        konseptId:
+          type: integer
+          format: int64
+        label:
+          type: string
+      required:
+      - konseptId
+      - label
     RegionKostnadssteder:
       type: object
       properties:
